--- a/index.html
+++ b/index.html
@@ -3,36 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Web Simple</title>
+    <title>Biografía - [Tu Nombre]</title>
+    <style>
+        /* Agrega estilos CSS personalizados aquí */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            line-height: 1.6;
+            color: #666;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Bienvenido a Mi Página Web Simple</h1>
-    </header>
-
-    <nav>
-        <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Acerca de</a></li>
-            <li><a href="#">Servicios</a></li>
-            <li><a href="#">Contacto</a></li>
-        </ul>
-    </nav>
-
-    <main>
-        <h2>Acerca de Nosotros</h2>
-        <p>Somos una empresa dedicada a crear páginas web simples.</p>
-
-        <h2>Nuestros Servicios</h2>
-        <ul>
-            <li>Diseño web</li>
-            <li>Desarrollo web</li>
-            <li>Optimización de sitios web</li>
-        </ul>
-    </main>
-
-    <footer>
-        <p>Derechos de autor © 2023. Mi Página Web Simple.</p>
-    </footer>
+    <div class="container">
+        <header>
+            <h1>[Tu Nombre]</h1>
+        </header>
+        <section>
+            <h2>Biografía</h2>
+            <p>Soy [Tu Nombre], creador de Osadía Vivaldi y auxiliar de geriatría. Aunque carezco de un título universitario en economía o programación, me he comprometido a la mejora continua mediante cursos en Platzi. He abordado temáticas variadas, desde inteligencia emocional hasta análisis financiero y liderazgo. Esta búsqueda de conocimiento surgió cuando supe que sería padre, y decidí tomar control de mi vida financiera. Mis estudios abarcan campos como la inversión, análisis de riesgo bursátil, análisis técnico, y más. He descubierto que no se necesita un título específico para aprender a invertir y manejar el dinero; lo fundamental es el deseo de aprender y adaptarse a las circunstancias. Mi diversidad de cursos y certificaciones respalda mi compromiso con el crecimiento y la capacidad de adaptación, cualidades que aplico tanto en mi trabajo como en mi vida personal.</p>
+        </section>
+    </div>
 </body>
 </html>
+
